fixes home page section link and spacing

--- a/assets/css/components/_post-list.scss
+++ b/assets/css/components/_post-list.scss
@@ -3,8 +3,11 @@
   h2 {
     font-size: 1.5rem;
     font-weight: normal;
+    margin-bottom: 2rem;
+
     @include breakpoint("medium") {
       font-size: 2rem;
+      margin-bottom: 2.25rem;
     }
   }
 }
